--- a/COVIDiary/Base.lproj/Main.storyboard
+++ b/COVIDiary/Base.lproj/Main.storyboard
@@ -87,23 +87,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WrE-3g-Hz5">
-                                <rect key="frame" x="184" y="45" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WrE-3g-Hz5">
+                                <rect key="frame" x="13" y="20" width="381" height="102"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Button" image="updatesButton"/>
+                                <connections>
+                                    <action selector="updatesButton:" destination="83y-Ph-VuV" eventType="touchUpInside" id="EcK-ei-KWF"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCP-I3-u2y">
-                                <rect key="frame" x="184" y="91" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCP-I3-u2y">
+                                <rect key="frame" x="13" y="151" width="381" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Button" image="symptomsButton"/>
+                                <connections>
+                                    <action selector="symptomsButton:" destination="83y-Ph-VuV" eventType="touchUpInside" id="g5s-2m-lYX"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a33-J3-Zff">
-                                <rect key="frame" x="184" y="137" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a33-J3-Zff">
+                                <rect key="frame" x="13" y="274" width="381" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Button" image="resourcesButton"/>
+                                <connections>
+                                    <action selector="resourcesButton:" destination="83y-Ph-VuV" eventType="touchUpInside" id="8c5-0Z-gml"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKJ-ME-cbg">
-                                <rect key="frame" x="196" y="317" width="42" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6uu-rd-onn">
+                                <rect key="frame" x="17" y="151" width="381" height="96"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="symptomsButton"/>
+                                <connections>
+                                    <action selector="symptomsButton:" destination="83y-Ph-VuV" eventType="touchUpInside" id="mcZ-W5-ywm"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62d-2d-hV6">
+                                <rect key="frame" x="186" y="122" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgq-4H-xaO">
+                                <rect key="frame" x="182" y="255" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ok3-h1-R8Q">
+                                <rect key="frame" x="182" y="378" width="42" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -114,10 +145,17 @@
                         <viewLayoutGuide key="safeArea" id="bg7-kw-qCq"/>
                     </view>
                     <navigationItem key="navigationItem" id="dv2-BO-N7m"/>
+                    <connections>
+                        <outlet property="resourcesLabel" destination="ok3-h1-R8Q" id="wZC-es-43p"/>
+                        <outlet property="resourcesOutlet" destination="a33-J3-Zff" id="odx-GX-kCN"/>
+                        <outlet property="symptomsLabel" destination="cgq-4H-xaO" id="UmO-LQ-8fo"/>
+                        <outlet property="symptomsOutlet" destination="6uu-rd-onn" id="rBj-Hg-910"/>
+                        <outlet property="updatesLabel" destination="62d-2d-hV6" id="2Bm-w5-WWM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2tY-Fn-dBq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1000" y="133"/>
+            <point key="canvasLocation" x="1000.0000000000001" y="132.58928571428572"/>
         </scene>
         <!--My Memories View Controller-->
         <scene sceneID="pEF-vI-HjE">
@@ -173,6 +211,9 @@
         <image name="map button background" width="132" height="120"/>
         <image name="my memories button" width="391" height="97"/>
         <image name="news background button" width="119" height="107"/>
+        <image name="resourcesButton" width="391" height="96"/>
+        <image name="symptomsButton" width="394" height="96"/>
+        <image name="updatesButton" width="389" height="102"/>
         <image name="yellow button background" width="120" height="104"/>
     </resources>
 </document>
