--- a/COVIDiary/Base.lproj/Main.storyboard
+++ b/COVIDiary/Base.lproj/Main.storyboard
@@ -162,16 +162,31 @@
             <objects>
                 <viewController id="Mcc-08-kcE" customClass="myMemoriesViewController" customModule="COVIDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Ug-1b-0UH">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1146"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="final image" translatesAutoresizingMaskIntoConstraints="NO" id="PPo-Ax-tZT">
+                                <rect key="frame" x="30" y="55" width="193" height="268"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="prom" translatesAutoresizingMaskIntoConstraints="NO" id="3hy-Sm-7Ls">
+                                <rect key="frame" x="131" y="331" width="283" height="191"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="spaday" translatesAutoresizingMaskIntoConstraints="NO" id="IVc-A5-NSP">
+                                <rect key="frame" x="20" y="530" width="181" height="249"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="vv4-KP-Ins"/>
                     </view>
                     <navigationItem key="navigationItem" id="sQm-En-shK"/>
+                    <size key="freeformSize" width="414" height="1200"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rP0-A2-a9v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-265" y="824"/>
+            <point key="canvasLocation" x="-402.89855072463769" y="948.88392857142856"/>
         </scene>
         <!--Add Image View Controller-->
         <scene sceneID="LId-xf-6HY">
@@ -275,10 +290,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="final image" width="3024" height="4032"/>
         <image name="map button background" width="132" height="120"/>
         <image name="my memories button" width="391" height="97"/>
         <image name="news background button" width="119" height="107"/>
+        <image name="prom" width="3088" height="2320"/>
         <image name="resourcesButton" width="391" height="96"/>
+        <image name="spaday" width="2808" height="3744"/>
         <image name="symptomsButton" width="394" height="96"/>
         <image name="updatesButton" width="389" height="102"/>
         <image name="yellow button background" width="120" height="104"/>
